--- a/shiny/shiny-accessible.qmd
+++ b/shiny/shiny-accessible.qmd
@@ -5,15 +5,24 @@ format:
     toc: true
     highlight-style: a11y-dark
 editor: visual
+execute:
+  eval: true
+  output: false
+  warning: true
 ---
 
 ## Building an App
 
 A **Shiny** app is a web page (`ui`) connected to a computer running a live R session (`server`).
 
+```{r}
+library(shiny)
+```
+
 Users can manipulate the UI, which will cause the server to update the UI's display (by running R code).
 
-Save your template as `app.R`. Keep your app in a directory along with optional extra files.
+Save your template as `app.R`.
+Keep your app in a directory along with optional extra files.
 
 **app-name:** The directory name is the app name
 
@@ -58,7 +67,8 @@ server <- function(input, output, session) {
 shinyApp(ui = ui, server = server)
 ```
 
-See annotated examples of Shiny apps by running `runExample(<example name>)`. Run `runExample()` with no arguments for a list of example names.
+See annotated examples of Shiny apps by running `runExample(<example name>)`.
+Run `runExample()` with no arguments for a list of example names.
 
 ## Share
 
@@ -96,13 +106,15 @@ Share your app in three ways:
 
 : Table of render\*() functions and their associated \*Output() functions.
 
-These are the core output types. See [htmlwidgets.org](htmlwidgets.org) for many more options.
+These are the core output types.
+See [htmlwidgets.org](htmlwidgets.org) for many more options.
 
 ## Inputs
 
 Collect values from the user.
 
-Access the current value of an input object with `input$<inputId>`. Input values are **reactive**.
+Access the current value of an input object with `input$<inputId>`.
+Input values are **reactive**.
 
 -   `actionButton(inputId, label, icon, width, ...)`
 
@@ -136,7 +148,9 @@ Access the current value of an input object with `input$<inputId>`. Input values
 
 ## Reactivity
 
-Reactive values work together with reactive functions. Call a reactive value from within the arguments of one of these functions to avoid the error. **Operation not allowed without an active reactive context.**
+Reactive values work together with reactive functions.
+Call a reactive value from within the arguments of one of these functions to avoid the error.
+**Operation not allowed without an active reactive context.**
 
 -   Perform side effects
     -   `observeEvent()`
@@ -247,7 +261,9 @@ Reactive values work together with reactive functions. Call a reactive value fro
 
 ### Render Reactive Output
 
--   `render*()` functions: (see front page) Builds an object to display. Will rerun code in body to rebuild the object whenever a reactive value in the code changes. Save the results to `output$<outputId>`.
+-   `render*()` functions: (see front page) Builds an object to display.
+    Will rerun code in body to rebuild the object whenever a reactive value in the code changes.
+    Save the results to `output$<outputId>`.
 
     ```{r}
     #| eval: false
@@ -271,7 +287,8 @@ Reactive values work together with reactive functions. Call a reactive value fro
 
 ### Perform Side Effects
 
--   `observeEvent(eventExpr, handlerExpr, event.env, event.quoted, handler.env, handler.quoted, ..., label, suspended, priority, domain, autoDestroy, ignoreNULL, ignoreInit, once)`: Runs code in 2nd argument when reactive values in 1st argument change. See `observe()` for alternative.
+-   `observeEvent(eventExpr, handlerExpr, event.env, event.quoted, handler.env, handler.quoted, ..., label, suspended, priority, domain, autoDestroy, ignoreNULL, ignoreInit, once)`: Runs code in 2nd argument when reactive values in 1st argument change.
+    See `observe()` for alternative.
 
     ```{r}
     #| eval: false
@@ -291,7 +308,8 @@ Reactive values work together with reactive functions. Call a reactive value fro
 
 ### Remove Reactivity
 
--   `isolate(expr)`: Runs a code block. Returns a **non-reactive** copy of the results.
+-   `isolate(expr)`: Runs a code block.
+    Returns a **non-reactive** copy of the results.
 
     ```{r}
     #| eval: false
@@ -337,11 +355,14 @@ Returns HTML:
 </div>
 ```
 
-Add static HTML elements with **tags**, a list of functions that parallel common HTML tags, e.g. `tags$a()`. Unnamed arguments will be passed into the tag; named arguments will become tag attributes.
+Add static HTML elements with **tags**, a list of functions that parallel common HTML tags, e.g. `tags$a()`.
+Unnamed arguments will be passed into the tag; named arguments will become tag attributes.
 
-Run `names(tags)` for a complete list. `tags$h1("Header")` -\> `<h1>Header</h1>`
+Run `names(tags)` for a complete list.
+`tags$h1("Header")` -\> `<h1>Header</h1>`
 
-The most common tags have wrapper functions. You do not need to prefix their names with `tags$`.
+The most common tags have wrapper functions.
+You do not need to prefix their names with `tags$`.
 
 ```{r}
 #| eval: false
@@ -424,7 +445,8 @@ Other elements:
 -   `titlePanel()`
 -   `wellPanel()`
 
-Organize panels and elements into a layout with a layour function. Add elements as arguments of the layout functions.
+Organize panels and elements into a layout with a layour function.
+Add elements as arguments of the layout functions.
 
 -   `sidebarLayout()`
 
@@ -451,7 +473,7 @@ Organize panels and elements into a layout with a layour function. Add elements 
     )
     ```
 
-Also `flowLayout()`, `splitLayout()`, `verticalLayout()`, `fixedPage()`, and `fixedRow()`. 
+Also `flowLayout()`, `splitLayout()`, `verticalLayout()`, `fixedPage()`, and `fixedRow()`.
 
 Layer tabPanels on top of each other, and navigate between them with:
 
@@ -521,3 +543,19 @@ bs_theme(bg = "#558AC5",
 -   `?bs_theme` for a full list of arguments.
 
 -   `bs_themer()`: Place within the server function ot use the interactive theming widget.
+
+------------------------------------------------------------------------
+
+CC BY SA Posit Software, PBC • [info\@posit.co](mailto:info@posit.co) • [posit.co](https://posit.co)
+
+Learn more at [shiny.rstudio.com](https://shiny.rstudio.com/)
+
+Updated: `r format(Sys.Date(), "%Y-%m")`.
+
+```{r}
+#| output: true
+
+packageVersion("shiny")
+```
+
+------------------------------------------------------------------------
